--- a/packages/preset-tailwind/tsconfig.json
+++ b/packages/preset-tailwind/tsconfig.json
@@ -19,5 +19,5 @@
     "stripInternal": true,
     "noImplicitAny": true
   },
-  "exclude": ["build"]
+  "exclude": ["build", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
