--- a/packages/styled/tsconfig.json
+++ b/packages/styled/tsconfig.json
@@ -10,5 +10,5 @@
     "exactOptionalPropertyTypes": false,
     "importHelpers": true
   },
-  "include": ["src", "test", "vite.config.*"]
+  "exclude": ["build", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
