--- a/packages/arc-parser/tsconfig.json
+++ b/packages/arc-parser/tsconfig.json
@@ -1,19 +1,5 @@
 {
   "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "declarationMap": false,
-    "noImplicitAny": true,
-    "sourceMap": false,
-    "resolveJsonModule": false,
-    "module": "CommonJS",
-    "outDir": "build",
-    "lib": ["ES2015", "ESNext"],
-    "moduleResolution": "node",
-    "noEmit": false,
-    "strict": true,
-    "target": "ESNext"
-  },
   "include": ["src", "test", "./*.d.ts"],
-  "exclude": ["build"]
+  "exclude": ["build", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
