--- a/packages/css/tsconfig.json
+++ b/packages/css/tsconfig.json
@@ -12,5 +12,5 @@
     "target": "esnext"
   },
   "include": ["src", "test", "./*.d.ts"],
-  "exclude": ["build"]
+  "exclude": ["build", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
