--- a/packages/native-tailwind-nextjs/tsconfig.json
+++ b/packages/native-tailwind-nextjs/tsconfig.json
@@ -18,5 +18,5 @@
     "stripInternal": true,
     "noImplicitAny": true
   },
-  "exclude": ["build"]
+  "exclude": ["build", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
