--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,6 +2,8 @@
   "extends": "@tsconfig/react-native/tsconfig.json",
   "compilerOptions": {
     "moduleResolution": "node",
+    "types": ["node"],
+    "declaration": true,
     "esModuleInterop": true,
     "sourceMap": true,
     "strictFunctionTypes": true,
