--- a/packages/preset-tailwind/tsconfig.build.json
+++ b/packages/preset-tailwind/tsconfig.build.json
@@ -2,7 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "build",
+    "rootDir": "src",
     "noEmit": false
   },
+  "include": ["src/**/*"],
   "exclude": ["./test/"]
 }
