break(packages): build config

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "scripts": {
     "build": "turbo run build --filter='./packages/*'",
     "build:release": "yarn build:libs && yarn libs:foreach pack && yarn libs:foreach exec \"mkdir _release && tar zxvf package.tgz --directory _release && rm package.tgz\"",
+    "build:watch": "turbo run build:watch --filter='./packages/*'",
+    "example:next-pages": "turbo run dev --filter='next-pages-example'",
     "expo:android": "yarn workspace expo-app run android",
     "expo:ios": "yarn workspace expo-app run ios",
     "expo:start": "yarn workspace expo-app run start",
