--- a/packages/preset-tailwind/package.json
+++ b/packages/preset-tailwind/package.json
@@ -22,8 +22,7 @@
     "directory": "packages/preset-tailwind"
   },
   "sideEffects": false,
-  "main": "./build/index.cjs.js",
-  "module": "./build/index.es.js",
+  "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "files": [
     "build",
@@ -37,6 +36,7 @@
   ],
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
+    "build:watch": "tsc -p tsconfig.build.json -w",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "test": "jest",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
