--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@vscode/test-electron": "^2.3.2",
     "chai": "4.3.7",
     "concurrently": "^7.6.0",
+    "esbuild": "^0.19.5",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.26.0",
