--- a/packages/ts-plugin/tsconfig.json
+++ b/packages/ts-plugin/tsconfig.json
@@ -4,12 +4,11 @@
     "module": "CommonJS",
     "target": "ESNext",
     "outDir": "build",
-    "rootDir": "src",
     "strict": true,
     "noEmit": false,
     "declaration": true,
     "sourceMap": true,
     "skipLibCheck": true
   },
-  "exclude": ["test", "build", "e2e", "**/node_modules", "vitest.config.ts"]
+  "exclude": ["build", "babel.config.js", "metro.config.js", "jest.config.js", "build.js"]
 }
