--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -16,7 +16,7 @@
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": ["next-app", "expo-app", "site", "@universal-labs/native-twin-vscode"],
+  "ignore": ["next-pages-example", "expo-app", "site", "@universal-labs/native-twin-vscode"],
   "___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
     "onlyUpdatePeerDependentsWhenOutOfRange": true
   }
