--- a/packages/ts-plugin/tsconfig.build.json
+++ b/packages/ts-plugin/tsconfig.build.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "build",
+    "declaration": true,
+    "sourceMap": true,
     "noEmit": false
   },
   "exclude": ["./test/"]
