--- a/packages/native-twin-nextjs/tsconfig.json
+++ b/packages/native-twin-nextjs/tsconfig.json
@@ -2,11 +2,8 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "jsx": "react-jsx",
-    "module": "ESNext",
+    "lib": ["DOM", "DOM.Iterable"],
     "noUnusedLocals": false,
-    "target": "ESNext",
     "strictFunctionTypes": false,
     "strictNullChecks": true,
     "noImplicitReturns": false,
