feat(packages): dev scripts

--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "build": "turbo run build --filter='./packages/*'",
     "build:release": "yarn build && yarn libs:foreach pack && yarn libs:foreach exec \"mkdir _release && tar zxvf package.tgz --directory _release && rm package.tgz\"",
     "build:watch": "turbo run build:watch --filter='./packages/*'",
+    "dev": "npm_config_loglevel=silent turbo dev",
+    "example:expo": "yarn workspace expo-app run start",
     "example:next-pages": "turbo run dev --filter='next-pages-example'",
-    "expo:android": "yarn workspace expo-app run android",
-    "expo:ios": "yarn workspace expo-app run ios",
-    "expo:start": "yarn workspace expo-app run start",
     "format": "prettier --write packages apps examples \"**/*.{js,ts,tsx,md}\"",
     "libs:foreach": "yarn workspaces foreach --no-private --verbose",
     "lint": "turbo run lint",
