--- a/packages/native-twin-nextjs/package.json
+++ b/packages/native-twin-nextjs/package.json
@@ -42,6 +42,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "build:watch": "tsc -p tsconfig.build.json -w",
+    "dev": "tsc -p tsconfig.build.json --watch --preserveWatchOutput",
     "lint": "eslint \"./**/*.{ts,tsx}\""
   },
   "dependencies": {
