fix(ci): missing publish config

--- a/packages/arc-parser/package.json
+++ b/packages/arc-parser/package.json
@@ -12,5 +12,9 @@
     "build:watch": "tsc -p tsconfig.build.json -w",
     "dev": "tsc -p tsconfig.build.json --watch --preserveWatchOutput",
     "lint": "eslint \"./**/*.{ts,tsx}\""
+  },
+  "publishConfig": {
+    "access": "public",
+    "directory": "_release/package"
   }
 }
