--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@universal-labs/native-twin-vscode",
   "version": "1.0.0",
+  "private": true,
   "description": "Native Twin vscode extension.",
   "categories": [
     "Programming Languages",
@@ -109,5 +110,9 @@
   },
   "engines": {
     "vscode": "^1.80.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "directory": "_release/package"
   }
 }
