--- a/packages/preset-tailwind/package.json
+++ b/packages/preset-tailwind/package.json
@@ -49,5 +49,9 @@
   "peerDependencies": {
     "react": ">=18.0",
     "react-native": ">=0.71.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "directory": "_release/package"
   }
 }
