fix: unitless values to number

--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,9 @@
       "cache": false,
       "persistent": true
     },
-    "test": {},
+    "test": {
+      "dependsOn": ["^build"]
+    },
     "test:watch": {
       "cache": false
     },
