fix(workspace): upgrading tools

--- a/package.json
+++ b/package.json
@@ -63,5 +63,15 @@
     "turbo": "^1.10.16",
     "typescript": "^5.2.2"
   },
-  "packageManager": "yarn@3.6.3"
+  "majestic": {
+    "jestScriptPath": "./node_modules/jest/bin/jest.js",
+    "configs": {
+      "css": {
+        "args": [
+          "--config=./packages/css/jest.config.js"
+        ]
+      }
+    }
+  },
+  "packageManager": "yarn@4.1.1"
 }
