--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -46,7 +46,7 @@
     "stable-hash": "0.0.3"
   },
   "devDependencies": {
-    "@types/react": "18.2.14",
+    "@types/react": "^18.2.64",
     "@types/react-dom": "18.0.10",
     "@types/react-is": "^17.0.3"
   },
