--- a/package.json
+++ b/package.json
@@ -39,27 +39,27 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "20.2.5",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
     "@vscode/test-electron": "^2.3.2",
     "chai": "4.3.7",
     "concurrently": "^7.6.0",
     "esbuild": "^0.19.5",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "7.31.11",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-unused-imports": "2.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unused-imports": "^3.1.0",
     "glob": "^8.1.0",
     "jest": "^29.3.1",
     "jest-expo": "^49.0.0",
     "mocha": "^10.2.0",
-    "prettier": "^2.8.3",
+    "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
-    "tslib": "^2.6.0",
+    "tslib": "^2.6.2",
     "turbo": "^1.12.5",
     "typescript": "^5.4.2"
   },
