--- a/packages/helpers/tsconfig.json
+++ b/packages/helpers/tsconfig.json
@@ -5,8 +5,7 @@
     "declarationMap": false,
     "noImplicitAny": true,
     "resolveJsonModule": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "module": "ESNext",
+    "module": "esnext",
     "moduleResolution": "node",
     "noEmit": false,
     "strict": true,
