fix(workspace): helpers test avoided

--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -26,10 +26,7 @@
     "build": "tsc -p tsconfig.build.json",
     "build:watch": "tsc -p tsconfig.build.json -w",
     "dev": "tsc -p tsconfig.build.json --watch --preserveWatchOutput",
-    "lint": "eslint \"./**/*.{ts,tsx}\"",
-    "test": "jest",
-    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
-    "test:watch": "jest --watch"
+    "lint": "eslint \"./**/*.{ts,tsx}\""
   },
   "publishConfig": {
     "access": "public",
