fix(css): modules map (+5 squashed commits) Squashed commits: [78e17f8] fix(css): modules map [b768a19] fix(css): modules map [d857056] fix(css): modules map [27e0f58] fix(css): Sheets to css [c0255dc] fix(css): Sheets

--- a/packages/helpers/tsconfig.json
+++ b/packages/helpers/tsconfig.json
@@ -5,7 +5,8 @@
     "declarationMap": false,
     "noImplicitAny": true,
     "resolveJsonModule": true,
-    "module": "esnext",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "module": "ESNext",
     "moduleResolution": "node",
     "noEmit": false,
     "strict": true,
