--- a/packages/css/tsconfig.json
+++ b/packages/css/tsconfig.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "declarationMap": false,
+    "strictFunctionTypes": false,
     "noImplicitAny": true,
-    "resolveJsonModule": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ESNext",
     "moduleResolution": "node",
