--- a/packages/babel/package.json
+++ b/packages/babel/package.json
@@ -23,7 +23,7 @@
     "@babel/types": "^7.24.0",
     "@effect/schema": "0.64.5",
     "babel-plugin-tester": "^11.0.4",
-    "effect": "2.4.7"
+    "effect": "^2.4.17"
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.23.3",
