--- a/packages/ts-plugin/tsconfig.build.json
+++ b/packages/ts-plugin/tsconfig.build.json
@@ -5,7 +5,8 @@
     "outDir": "build",
     "declaration": true,
     "sourceMap": true,
-    "noEmit": false
+    "noEmit": false,
+    "declarationMap": true
   },
   "exclude": ["./test/"]
 }
