--- a/packages/css/.eslintrc.json
+++ b/packages/css/.eslintrc.json
@@ -1,8 +1,6 @@
 {
   "extends": "../../.eslintrc.json",
-  "ignorePatterns": [
-    "!**/*", "build"
-  ],
+  "ignorePatterns": ["!**/*", "build"],
   "overrides": [
     {
       "files": [
@@ -13,10 +11,9 @@
       ],
       "rules": {
         "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/no-var-requires": "off",
-        "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
-        "no-empty": "off"
+        "@typescript-eslint/no-empty-function": "off",
+        "no-var": "off"
       }
     }
   ]
