--- a/packages/helpers/.eslintrc.json
+++ b/packages/helpers/.eslintrc.json
@@ -9,7 +9,11 @@
       "extends": [
         "plugin:@nx/typescript"
       ],
-      "rules": {}
+      "rules": {
+        "no-var": "off",
+        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/no-explicit-any": "off"
+      }
     }
   ]
 }
