--- a/packages/native-twin-nextjs/.eslintrc.json
+++ b/packages/native-twin-nextjs/.eslintrc.json
@@ -9,7 +9,10 @@
       "extends": [
         "plugin:@nx/typescript"
       ],
-      "rules": {}
+      "rules": {
+        "@typescript-eslint/ban-ts-comment": "off",
+        "@typescript-eslint/no-explicit-any": "off"
+      }
     }
   ]
 }
