--- a/packages/ts-plugin/package.json
+++ b/packages/ts-plugin/package.json
@@ -40,5 +40,15 @@
   "publishConfig": {
     "access": "public",
     "directory": "_release/package"
+  },
+  "nx": {
+    "includedScripts": [
+      "build",
+      "build:watch",
+      "clean",
+      "esbuild:build",
+      "lint",
+      "vscode:dev"
+    ]
   }
 }
