--- a/examples/next-app-dir/package.json
+++ b/examples/next-app-dir/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "lint": "next lint",
+    "lint": "echo $HOME",
     "start": "next start"
   },
   "dependencies": {
