--- a/package.json
+++ b/package.json
@@ -30,6 +30,13 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
+    "@nx/eslint": "18.2.2",
+    "@nx/eslint-plugin": "18.2.2",
+    "@nx/expo": "18.2.2",
+    "@nx/jest": "18.2.2",
+    "@nx/js": "18.2.2",
+    "@nx/next": "18.2.2",
+    "@nx/react-native": "18.2.2",
     "@testing-library/react-native": "^12.0.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/react-native": "^3.0.3",
@@ -39,8 +46,8 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "20.2.5",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
     "@vscode/test-electron": "^2.3.2",
     "@welldone-software/why-did-you-render": "^7.0.1",
     "chai": "4.3.7",
@@ -57,11 +64,14 @@
     "jest": "^29.3.1",
     "jest-expo": "^49.0.0",
     "mocha": "^10.2.0",
+    "nx": "18.2.2",
     "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
     "tslib": "^2.6.2",
-    "turbo": "^1.13.2",
     "typescript": "^5.4.2"
+  },
+  "nx": {
+    "includedScripts": []
   },
   "overrides": {
     "@babel/types": "7.23.9",
