--- a/packages/arc-parser/package.json
+++ b/packages/arc-parser/package.json
@@ -11,7 +11,8 @@
     "build": "tsc -p tsconfig.build.json",
     "clean": "rm -rf build",
     "dev": "tsc -p tsconfig.build.json --watch --preserveWatchOutput",
-    "lint": "eslint \"./**/*.{ts,tsx}\""
+    "lint": "eslint \"./**/*.{ts,tsx}\"",
+    "test": "echo $HOME"
   },
   "publishConfig": {
     "access": "public",
