--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "build:watch": "tsc -p tsconfig.build.json -w"
+    "build:watch": "tsc -p tsconfig.build.json -w",
+    "lint": "eslint"
   },
   "dependencies": {
     "@effect/cli": "0.35.25",
@@ -18,7 +19,7 @@
     "@effect/platform-node": "0.45.25",
     "@effect/printer": "0.32.1",
     "@effect/printer-ansi": "0.32.25",
-    "@effect/schema": "0.64.17",
+    "@effect/schema": "^0.64.18",
     "@effect/typeclass": "0.23.16",
     "effect": "^2.4.17",
     "esbuild": "^0.20.2",
