--- a/packages/native-twin/.eslintrc.json
+++ b/packages/native-twin/.eslintrc.json
@@ -1,8 +1,6 @@
 {
   "extends": "../../.eslintrc.json",
-  "ignorePatterns": [
-    "!**/*", "build"
-  ],
+  "ignorePatterns": ["!**/*"],
   "overrides": [
     {
       "files": [
@@ -12,11 +10,13 @@
         "plugin:@nx/typescript"
       ],
       "rules": {
+        "@typescript-eslint/ban-ts-comment": "off",
+        "@typescript-eslint/ban-types": "off",
         "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/no-var-requires": "off",
-        "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
-        "no-empty": "off"
+        "@typescript-eslint/no-unused-vars": "off",
+        "prefer-rest-params": "off",
+        "@typescript-eslint/no-non-null-asserted-optional-chain": "off"
       }
     }
   ]
