break(workspace): back to nx

--- a/examples/next-app-dir/package.json
+++ b/examples/next-app-dir/package.json
@@ -13,7 +13,7 @@
     "@native-twin/nextjs": "workspace:*",
     "@native-twin/preset-tailwind": "workspace:*",
     "@native-twin/styled": "workspace:*",
-    "next": "13.5.4",
+    "next": "^14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.6"
