--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -9,10 +9,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "@next/font": "13.0.6",
+    "@next/font": "^14.1.4",
     "autoprefixer": "10.4.13",
     "critters": "^0.0.16",
-    "next": "13.1.4",
+    "next": "^14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.6"
