--- a/examples/next-app/package.json
+++ b/examples/next-app/package.json
@@ -13,8 +13,8 @@
     "@native-twin/nextjs": "workspace:*",
     "@native-twin/preset-tailwind": "workspace:*",
     "@native-twin/styled": "workspace:*",
-    "@next/font": "13.0.6",
-    "next": "13.5.4",
+    "@next/font": "^14.1.4",
+    "next": "^14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.6"
