--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -3,8 +3,8 @@
   "version": "1.4.10",
   "private": true,
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
+    "docs:build": "next build",
     "lint": "next lint",
     "start": "next start"
   },
