--- a/package.json
+++ b/package.json
@@ -14,18 +14,16 @@
     "apps/*"
   ],
   "scripts": {
-    "build": "turbo run build --filter='./packages/*'",
+    "build": "nx run-many -t build",
     "build:release": "yarn build && yarn libs:foreach pack && yarn libs:foreach exec \"mkdir _release && tar zxvf package.tgz --directory _release && rm package.tgz\"",
-    "build:watch": "turbo run build:watch --filter='./packages/*'",
-    "docs:build": "turbo run build & turbo run build --filter='./apps/site'",
+    "build:watch": "nx run-many -t build:watch",
+    "docs:build": "nx run -t docs:build",
     "example:expo": "yarn workspace expo-app run start",
-    "example:next-pages": "turbo run dev --filter='next-pages-example'",
     "format": "prettier --write packages apps examples \"**/*.{js,ts,tsx,md}\"",
     "libs:foreach": "yarn workspaces foreach --no-private --verbose",
-    "lint": "turbo run lint",
+    "lint": "nx run-many -t lint",
     "release": "yarn build:release && changeset publish",
-    "site:dev": "turbo run dev --project=site",
-    "test": "turbo test --continue"
+    "test": "nx run-many -t test"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
