break(workspace): back to nx

--- a/nx.json
+++ b/nx.json
@@ -24,7 +24,10 @@
   ],
   "targetDefaults": {
     "@nx/eslint:lint": {
-      "inputs": ["default", "{workspaceRoot}/.eslintrc.json"],
+      "inputs": [
+        "default",
+        "{workspaceRoot}/.eslintrc.json"
+      ],
       "cache": false
     },
     "build": {
