feat(vscode): extension server and client

--- a/packages/vscode-extension/.eslintrc.json
+++ b/packages/vscode-extension/.eslintrc.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../.eslintrc.json",
-  "ignorePatterns": ["!**/*"],
+  "ignorePatterns": [
+    "!**/*"
+  ],
   "overrides": [
     {
       "files": [
@@ -10,7 +12,13 @@
         "plugin:@nx/typescript"
       ],
       "rules": {
-        "@typescript-eslint/no-explicit-any": "off"
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-unused-vars": [
+          "error",
+          {
+            "argsIgnorePattern": "^_"
+          }
+        ]
       }
     }
   ]
