--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -14,6 +14,7 @@
   "main": "./build/extension.js",
   "scripts": {
     "build": "node ./build.js --production",
+    "build:tsc": "tsc",
     "clean": "rm -rf build",
     "lint": "eslint . --ext .ts,.tsx",
     "test": "echo \"TEST\"",
