--- a/packages/vscode-extension/.vscode/tasks.json
+++ b/packages/vscode-extension/.vscode/tasks.json
@@ -13,7 +13,7 @@
     },
     {
       "type": "npm",
-      "script": "build",
+      "script": "build:tsc:watch",
       "isBackground": true,
       "group": {
         "kind": "build",
